# akquant

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  run_tests.sh  sitemap.xml
en/: index.html
examples/: 01_quickstart.py  02_parameter_optimization.py  04_mixed_assets.py  06_complex_orders.py  08_event_callbacks.py  10_ml_walk_forward.py  11_plot_visualization.py  12_wfo_integrated.py  13_quantstats_report.py  14_multi_frequency.py  15_plot_intraday.py  16_adj_returns_signal.py  17_readme_demo.py  18_benchmark_multisymbol.py  19_factor_expression.py  20_risk_management_demo.py  21_warm_start_demo.py  22_strategy_runtime_config_demo.py  23_functional_callbacks_demo.py  24_functional_tick_simulation_demo.py  25_streaming_backtest_demo.py  26_streaming_quickstart.py  27_streaming_monitoring_console.py  28_streaming_alerts_and_persist.py  29_streaming_event_report.py  30_streaming_report_oneclick.py  31_streaming_live_console.py  32_streaming_live_web.py  33_report_and_analysis_outputs.py  34_multi_strategy_demo.py  34_multi_strategy_migration_demo.py  35_custom_broker_registry_demo.py  36_trailing_orders.py  37_feed_replay_alignment_demo.py  38_live_functional_strategy_demo.py  39_live_broker_submit_order_demo.py  40_functional_multi_slot_risk_demo.py  41_live_multi_slot_orchestration_demo.py  42_live_broker_event_audit_demo.py  43_target_weights_rebalance.py  (+22 more)
scripts/: cargo-test.sh  check_docs_api_examples.py  check_docs_links.py  dev-check.sh  find_legacy_execution_policy_calls.py  golden_baseline_report.py
search/: search_index.json
src/: account.rs  context.rs  event_manager.rs  history.rs  indicators.rs  lib.rs  order_manager.rs  portfolio.rs
tests/: test_account_risk_rules.py  test_custom_matcher.py  test_docs_api_examples.py  test_docs_links.py  test_engine.py  test_examples_regression.py  test_factor_engine.py  test_factor_ops.py  test_feed_adapter.py  test_gateway_callbacks.py  test_gateway_ctp_adapter.py  test_gateway_ctp_native.py  test_gateway_factory.py  test_gateway_mapper.py  test_gateway_registry.py  test_indicator_live_web_example.py  test_indicator_recording.py  test_live_runner_broker_bridge.py  test_multisymbol_cross_section_consistency.py  test_orders_df.py  test_params_adapter.py  test_partial_filled_status.py  test_quickstart_stream_consistency.py  test_report_helpers.py  test_report_plot_extensions.py  test_result_analysis_extensions.py  test_stop_orders.py  test_strategy_extras.py  (+6 more)
(+392 files in other folders)
